2003-11-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-popup-frame-parameters): Rename from
	`w3m-pop-up-frame-parameters' to make it easy to complete the
	`w3m-pop-up-frames' variable name.
	(w3m-popup-frame-parameters): Rename from
	`w3m-pop-up-frame-parameters'.
	(w3m-popup-frame-p): Make it a generic macro.
	(w3m-use-tab-p): New macro.
	(w3m-popup-window-p): Use `w3m-use-tab-p'.
	(w3m-view-this-url-1): Use `w3m-use-tab-p' and `w3m-popup-frame-p'.
	(w3m-copy-buffer): Ditto.
	(w3m-delete-buffer): Use `w3m-use-tab-p'.
	(w3m-goto-url): Use `w3m-use-tab-p' and `w3m-popup-frame-p'.
	(w3m): Modify to use new `w3m-popup-frame-p'.
	(w3m-header-line-insert): Use `w3m-use-tab-p'.

2003-11-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-current-redirect): Abolished.
	(w3m-clear-local-variables, w3m-copy-local-variables): Follow the
	above change.

	* w3m-proc.el (w3m-process-do-with-temp-buffer): Keep the current
	buffer after given FORM and BODY are evaluated.

2003-11-06  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-follow-redirection): Fix its docstring.
	(w3m-w3m-retrieve): When the above option is equal to nil, it is
	treated as 0.
	(w3m-retrieve-and-render): Check content type and charsets with
	redirected real URI instead of user-specified URI.

	* w3m-antenna.el (w3m-antenna-hns-last-modified): Do not accept
	`no-cache' argument.
	(w3m-antenna-check-site): Ditto.
	(w3m-antenna-mapcar, w3m-antenna-mapcar-after): New functions.
	(w3m-antenna-check-all-sites): Use the above functions.

2003-11-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-delete-buffer): New implementation.
	(w3m-delete-frame-maybe): Abolish.
	(w3m-delete-frames-and-windows): New function.
	(w3m-quit): Use it.
	(w3m-close-window): New implementation.
	(w3m-select-buffer-show-this-line): Specify the 1st arg to
	`one-window-p'.
	(w3m-select-buffer-quit): Ditto.
	(w3m-select-buffer-close-window): Ditto.

2003-11-06  Hideyuki SHIRAI  <shirai@meadowy.org>
